# object_renderer

./: CMakeLists.txt  README.md
cfg/: resources.cfg  resources.cfg~
lib/: CMakeLists.txt  camera_render_application.cpp  camera_render_application.h  ogre_application.cpp  ogre_application.h  resources.cfg  virtual_image_handler.cpp  virtual_image_handler.h
media/materials/programs/: depth_map.frag  depth_map.vert
media/materials/scripts/: depth.material
media/models/cheezit/: cheezit2.mesh  cheezit2.mesh.xml  material_0.material
models/box/: box.material  box.material~  box.mesh  box.mtl
